infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: digicel.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/transactions/?(.*)
            pathType: Prefix
            backend:
              service:
                name: transactions-srv
                port:
                  number: 3000
          - path: /api/accounts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: accounts-srv
                port:
                  number: 3000
